--- a/styles/options.css
+++ b/styles/options.css
@@ -19,10 +19,10 @@ body {
     cursor: pointer;
     display: inline-block;
     transition: opacity 0.2s ease;
+}
 
-    &:hover {
-        opacity: 0.7;
-    }
+.home-title:hover {
+    opacity: 0.7;
 }
 
 .container {
